--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
-                </a>
+                233396@buas.nl
+              </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                <a class="d-flex align-items-center" href="https://Instagram.com/" target="_blank">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Instagram">https://www.instagram.com/fleurversmissen?igsh=Z3drNmE3b2xrZ2tk&amp;utm_source=qr
+                  
                 </a>
               </li>
               <li class="contact-item">
