--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">User of Adobe software like; Premiere pro, Audition, and InDesign&nbsp; &nbsp;&nbsp;&nbsp;</li>
+              <li class="skill-item">Experienced camera operator</li>
+              <li class="skill-item">Socially active work experience&nbsp; &nbsp;&nbsp;&nbsp;</li>
             </ul>
           </section>
 
