--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
+                  <h4>Video production for SomTime</h4>
                   <h5>2025&nbsp;</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Produced Instagram videos that capture the warmth and atmosphere of SomTime.</li>
+                    <li>Personal interview concept developed around SomTime's 6 core quotes. &nbsp;</li>
+                    <li>Additional videography provided during a culinary workshop in collaboration with Heerlijk &amp; Hecht.</li>
                   </ul>
                 </div>
               </li>
@@ -102,10 +102,15 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
-                  <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
-                </div>
+                  <h4>Short documentary: ''1 Out Of 10''</h4>
+  <h5>20</h5>
+                                    <ul class="biography-details list-unstyled">
+                                      <li>Camera operator for the documentary about PCOS</li>
+                                      <li>Personal story captured to create awareness and recognition</li>
+                                      <li>Collaboration within a team to create an empathetic and informative production&nbsp;</li>
+									</ul>
+                                      <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
+				</div>
               </li>
 
             </ul>
@@ -127,9 +132,8 @@
                   <h5>2018&nbsp;–&nbsp;Present</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Specialization in the AV department&nbsp;</li>
+
                   </ul>
                 </div>
               </li>
@@ -148,7 +152,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+  </section>
 
           <!-- This is the end of the "Education" section -->
 
