--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/cameraicon.png" alt="Company logo" width="8000">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Video production for SomTime</h4>
@@ -99,16 +99,16 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/documentaryclappericon.svg" alt="Company logo" width="800">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Short documentary: ''1 Out Of 10''</h4>
-  <h5>20</h5>
+  <h5>2024</h5>
                                     <ul class="biography-details list-unstyled">
                                       <li>Camera operator for the documentary about PCOS</li>
                                       <li>Personal story captured to create awareness and recognition</li>
                                       <li>Collaboration within a team to create an empathetic and informative production&nbsp;</li>
-									</ul>
+				  </ul>
                                       <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
 				</div>
               </li>
@@ -141,7 +141,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logomillhillicon.svg" alt="School logo" width="750">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, Mill Hill College</h4>
