--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                   <h4>Short documentary: ''1 Out Of 10''</h4>
   <h5>2024</h5>
                                     <ul class="biography-details list-unstyled">
-                                      <li>Camera operator for the documentary about PCOS</li>
-                                      <li>Personal story captured to create awareness and recognition</li>
+                                      <li>Camera operator for a documentary about PCOS</li>
+                                      <li>Captured a personal story to raise awareness and recognition</li>
                                       <li>Collaboration within a team to create an empathetic and informative production&nbsp;</li>
 				  </ul>
                                       <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
@@ -132,7 +132,7 @@
                   <h5>2018&nbsp;–&nbsp;Present</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Specialization in the AV department&nbsp;</li>
+                    <li>Specialized in the AV department</li>
 
                   </ul>
                 </div>
@@ -237,9 +237,9 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">User of Adobe software like; Premiere pro, Audition, and InDesign&nbsp; &nbsp;&nbsp;&nbsp;</li>
+              <li class="skill-item">Proficient in Adobe software such as Premiere Pro, Audition, and InDesign</li>
               <li class="skill-item">Experienced camera operator</li>
-              <li class="skill-item">Socially active work experience&nbsp; &nbsp;&nbsp;&nbsp;</li>
+              <li class="skill-item">Experienced in socially engaging work environments</li>
             </ul>
           </section>
 
